# integgui2

./: .gitignore  CommandQueue.py  IntegView.py  LICENSE.md  README.md  controller.py  fits.py  integgui2.py  launcher.py  main.py  ope.py  pyproject.toml  setup.cfg  view.py
Handsets/: STANDARD.yml
Launchers/: AO188_1.def  AO188_1.yml  AO188_2.def  AO188_2.yml  AO188_3.yml  AO188_4.yml  BM.def  BM.yml  COMICS.def  COMICS.yml  ETC.def  ETC.yml  FLDMON.def  FMOS.def  FMOS.yml  FOCAS.def  FOCAS.yml  HDS.def  HDS.yml  HICIAO.def  HICIAO.yml  HSC.yml  IRCS.yml  K3D.def  K3D.yml  MOIRCS.def  MOIRCS.yml  SM.def  SM.yml  SPCAM.def  SPCAM.yml  SUKA.def  SUKA.yml  TELESCOPE.def  TELESCOPE.yml  TELESCOPE2.def  TELESCOPE2.yml  TM.def  TM.yml  WAVEPLAT.def  (+1 more)
integgui2/: CommandQueue.py  controller.py  fits.py  launcher.py  main.py
integgui2/view/: CodePage.py  CommandObject.py  DDCommandPage.py  Datasrc.py  Desktop.py  DialogPage.py  DirectoryPage.py  (+27 more)
scripts/: integgui2
view/: CodePage.py  CommandObject.py  CopyTSCTrackPage.py  DDCommandPage.py  DDCommandPage.py~  Datasrc.py  Desktop.py  Desktop.py~  DialogPage.py  DirectoryPage.py  EphemPage.py  FitsViewerPage.py  FitsViewerPage.py~  FrameInfoPage.py  FrameInfoPage.py~  HandsetPage.py  InfPage.py  IntegView.py  LauncherPage.py  LauncherPage.py~  LogPage.py  ObsInfoPage.py  ObsInfoPage.py~  OpePage.py  OpePage.py~  OptionsPage.py  Page.py  QueuePage.py  SkMonitorPage.py  SkMonitorPage.py~  SkPage.py  SkPage.py~  StatMonPage.py  TSCTrackPage.py  TablePage.py  TagPage.py  TaskPage.py  TaskPage.py~  TerminalPage.py  Workspace.py  (+10 more)
