[metadata]
name = integgui2
description = Provides the IntegGUI2 GUI for Subaru Telescope.
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=5.3.1
    pycairo>=1.21.0
    pygobject>=3.42.1
    ginga>=4.0
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/integgui2

[options.package_data]
integgui2.icons = *.svg, *.png
integgui2.view = gtk_css
